syntax = "proto3";

option go_package = "github.com/hyperledger/fabric/protos/peer";

package protos;

import "peer/peer.proto";
import "google/protobuf/empty.proto";

// The greeting service definition.
service Supervise {

  rpc GetPeer (PeerInfo) returns (PeerReply) {}

}


message PeerReply {
  string message = 1;
}

message ConnectPeer {
  string Endpoint  = 1;
	bytes Metadata  = 2;
	bytes PKIid     = 3;
}

message PeerInfo {
  uint64 peerHeight = 1; 
  PeerEndpoint peerEndpoint = 2;
  repeated ConnectPeer connectPeers = 3;
}

